fix styles on mobile devies

--- a/client/global.scss
+++ b/client/global.scss
@@ -17,6 +17,7 @@ body {
   font-family: sans-serif;
   box-sizing: border-box;
   color: $color4;
+  max-width: 100vw;
 }
 
 input {
